// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewTable /> render default view 1`] = `
<div
  class="page"
>
  <div
    class="container-padding"
  >
    <div>
      Header mock
    </div>
  </div>
  <div>
    FilterTopbar mock
  </div>
  <div
    class="table"
  >
    <div>
      Table mock
    </div>
  </div>
</div>
`;

exports[`<ViewTable /> render empty view 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<ViewTable /> render should render a warning because the view is deactivated 1`] = `
<div
  class="page"
>
  <div
    class="container-padding"
  >
    <div>
      Header mock
    </div>
  </div>
  <div>
    FilterTopbar mock
  </div>
  <div
    class="table"
  >
    <div
      class="d-flex h-100"
    >
      <div
        class="m-auto text-center"
      >
        <img
          alt="Invalid filters"
          src="test-file-stub"
        />
        <p
          class="title"
        >
          Invalid filters
        </p>
        <p
          class="text"
        >
          This view is deactivated because at least one of its filters is invalid.
          <br />
          Please review its filters, and either fix them or delete the view.
        </p>
      </div>
    </div>
  </div>
</div>
`;
